Base Framework Files.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ app/storage/
 
 # Laravel 5 & Lumen specific
 bootstrap/cache/
-storage/
+/public/storage
+Homestead.yaml
+Homestead.json
 .env.*.php
 .env.php
 .env
